--- a/index.html
+++ b/index.html
@@ -160,21 +160,20 @@
             <li class="main-list-element">
               <img
                 src="./images/img(4).jpg"
-                alt="a smiling man with dark hair and beard wearing a light blue shirt"
+                alt="mężczyzna-w-koszuli-uśmiechający-się"
                 width="264"
                 height="260"
               />
               <div class="employee">
                 <h3 class="main-list-item">Dariusz Obrycki</h3>
-                <p class="main-list-item-description">Product Designer</p>
+                <p class="main-list-item-description">Założyciel</p>
                 <ul class="icon-list">
                   <li class="social-media">
                     <a href="" class="social-media-link">
                       <svg class="social-media-icon" width="16" height="16">
                         <use
                           href="./images/icons.svg#icon-instagram-2"
-                        ></use></svg
-                    ></a>
+                        ></use></svg></a>
                   </li>
                   <li class="social-media">
                     <a href="" class="social-media-link">
