--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,14 @@
           >
           <ul class="list menu">
             <li>
-              <a href="./index.html" class="list-item link link-active class"
-                >Strona główna</a
-              >
+              <a href="./index.html" class="list-item link">Strona główna</a>
             </li>
             <li>
-              <a href="./portfolio.html" class="list-item link">Portfolio</a>
+              <a
+                href="./portfolio.html"
+                class="list-item link link-active class"
+                >Portfolio</a
+              >
             </li>
             <li>
               <a href="" class="list-item link">Kontakt</a>
